manifests/base/wedding-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wedding-website
  name: wedding-website-http
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: wedding-website
  type: ClusterIP
